# api_bindium

./: CHANGELOG.md  Cargo.toml  README.md  berger.toml  flake.nix
.github/workflows/: codeql.yml  release-plz.yml  rust.yaml
examples/: get_request.rs  headers.rs  parsers.rs  post_request.rs  testing.rs
src/: http_verb.rs  lib.rs  utils.rs
src/api_request/: error.rs  fetching_async.rs  fetching_sync.rs  http_request.rs  mod.rs  parsing.rs
src/api_request/async_funcs/: orchestration.rs  request.rs
src/api_request/parsers/: bytes.rs  image.rs  json.rs  mod.rs  text.rs
src/api_request/sync_funcs/: mod.rs  orchestration.rs  request.rs
src/api_response/: mod.rs  ureq_response.rs
src/client/: mod.rs
src/endpoints/: authority.rs  mod.rs  path.rs  query.rs  scheme.rs
src/error/: mod.rs
src/parsers/: bytes.rs  image.rs  json.rs  mod.rs  text.rs
src/parsers/json/: mod.rs  testing.rs
src/tests/: get.rs  mod.rs  post.rs
