[package]
name = "api_bindium"
version = "0.4.0"
edition = "2024"
rust-version = "1.85.0"
authors = ["RustyNova"]
description = "Framework for api binding crates"
keywords = ["api_bindings", "foundation", "framework"]
license = "MIT OR AGPL-3.0-or-later"
repository = "https://github.com/RustyNova016/api_bindium"

[dependencies]
# Fetching
ureq = { version = "3.1.0", default-features = false, features = ["json", "gzip"] }
governor = { version = "0.10.0", optional = true }

# Parsing
serde_core = { version = "1.0.220" }
serde_json = { version = "1.0.0" }
image = { version = "0.25.0", optional = true }

# Async
blocking = { version = "1.6.0", optional = true }
async-io = { version = "2.6.0", optional = true }

# Debuging
tracing = { version = "0.1.0", optional = true }
hotpath = { version = "0.15.0", optional = true }

# Others
bon = "3.8.0"
snafu = "0.9.0"
url-escape = "0.1.1"

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
macro_rules_attribute = "0.2.2"
smol-macros = "0.1.1"

[features]
default = ["rustls"]

# Async
sync = []
async = ["dep:blocking", "dep:async-io"]

# Fetching
native_tls = ["ureq/native-tls"]
rustls = ["ureq/rustls"]
rate_limit = ["dep:governor", "async"]
cookies = ["ureq/cookies"]

# Parsing
image = ["dep:image"]

# Debugging
backtrace = []
tracing = ["dep:tracing"]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[[example]]
required-features = ["sync"]
doc-scrape-examples = true
name = "get_request"
path = "examples/get_request.rs"

[[example]]
required-features = ["sync"]
doc-scrape-examples = true
name = "headers"
path = "examples/headers.rs"

[[example]]
required-features = ["sync"]
doc-scrape-examples = true
name = "post_request"
path = "examples/post_request.rs"

[[example]]
required-features = ["sync"]
doc-scrape-examples = true
name = "parsers"
path = "examples/parsers.rs"

[lints.clippy]
alloc_instead_of_core = "deny"
std_instead_of_core = "deny"
allow_attributes = "warn"
allow_attributes_without_reason = "deny"
cast_lossless = "deny"
cloned_instead_of_copied = "deny"
collapsible_else_if = "warn"
too_many_lines = "warn"
comparison_chain = "warn"
match_same_arms = "warn"
needless_collect = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
needless_raw_string_hashes = "warn"
needless_type_cast = "warn"
non_std_lazy_statics = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
or_then_unwrap = "warn"
range_plus_one = "warn"
range_minus_one = "warn"
rc_mutex = "warn"
redundant_clone = "warn"
redundant_else = "warn"
ref_option = "deny"
renamed_function_params = "warn"
return_and_then = "warn"
return_self_not_must_use = "warn"